--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ loveBtn.onclick = () => {
 
     message.style.display = "block";
     message.innerHTML = `
-    💕 รักนะคะ มายด์พินเซต ของพี่ 💕<br><br>
+    💕 รักนะคะ My Priness ของพี่ 💕<br><br>
     ขอให้หนูมีความสุขในทุกวันเลยนะ<br>
     อยู่ข้างพี่แบบนี้ไปนาน ๆ เลย<br>
     พี่จะดูแลหนูให้ดีที่สุดเท่าที่พี่จะทำได้<br>
