--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ button {
 
 <!-- เนื้อหา -->
 <div id="content">
-    <h1>💖 สำหรับคนพิเศษ 💖</h1>
+    <h1>💖 Happy Valentine 💖</h1>
 
     <img src="bow.jpg" alt="แฟน">
 
