--- a/index.html
+++ b/index.html
@@ -61,13 +61,41 @@ body {
 
 /* แก้ภาพไม่ขึ้น */
 img {
-    width: 250px;
-    height: 250px;
+    img {
+    width: 260px;
+    height: 260px;
     object-fit: cover;
-    border-radius: 20px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    border-radius: 30px;
     display: block;
     margin: auto;
+    position: relative;
+    z-index: 1;
+
+    /* กรอบขาวฟุ้ง */
+    border: 6px solid rgba(255,255,255,0.8);
+
+    /* เงาชมพูฟุ้ง ๆ */
+    box-shadow: 
+        0 0 25px rgba(255,182,193,0.8),
+        0 10px 40px rgba(255,105,180,0.5),
+        0 0 60px rgba(255,192,203,0.6);
+
+    /* แสงวิ้ง */
+    animation: glow 2.5s infinite alternate ease-in-out;
+}
+
+/* เอฟเฟกต์เรืองแสง */
+@keyframes glow {
+    from {
+        box-shadow: 
+            0 0 20px rgba(255,182,193,0.6),
+            0 10px 30px rgba(255,105,180,0.4);
+    }
+    to {
+        box-shadow: 
+            0 0 40px rgba(255,192,203,1),
+            0 10px 50px rgba(255,20,147,0.6);
+    }
 }
 
 /* คำถาม */
@@ -268,14 +296,49 @@ loveBtn.onclick = () => {
     };
 
     message.style.display = "block";
-    message.innerHTML = `
-    💕 รักนะคะ My Princess ของพี่ 💕<br><br>
-    ขอให้หนูมีความสุขในทุกวันเลยนะ<br>
-    อยู่ข้างพี่แบบนี้ไปนาน ๆ เลย<br>
-    พี่จะดูแลหนูให้ดีที่สุดเท่าที่พี่จะทำได้<br>
-    หนูคือรอยยิ้มของพี่เสมอ ❤️<br><br>
-    และไม่ว่าวันไหนจะดีหรือร้าย พี่ก็จะอยู่ข้างหนูเสมอ 🤍
-    `;
+    message.innerHTML = message.style.display = "block";
+message.innerHTML = `
+<div style="
+    background: linear-gradient(135deg,#ffd6e7,#ffe9f3);
+    padding:20px;
+    border-radius:25px;
+    box-shadow:0 8px 25px rgba(255,105,180,0.4);
+    color:#ff4d88;
+    font-size:20px;
+    line-height:1.8;
+    border:3px solid rgba(255,255,255,0.6);
+    position:relative;
+    overflow:hidden;
+">
+
+✨👑 💕 รักนะคะ My Princess ของพี่ 💕 👑✨<br><br>
+
+ขอให้หนูมีความสุขในทุกวันเลยนะ 🌸<br>
+อยู่ข้างพี่แบบนี้ไปนาน ๆ เลย<br>
+พี่จะดูแลหนูให้ดีที่สุดเท่าที่พี่จะทำได้ 💗<br>
+หนูคือรอยยิ้มของพี่เสมอ ❤️<br><br>
+
+และไม่ว่าวันไหนจะดีหรือร้าย<br>
+พี่ก็จะอยู่ข้างหนูเสมอ 🤍✨
+
+<div style="
+    position:absolute;
+    top:-10px;
+    right:-10px;
+    font-size:40px;
+    opacity:0.3;
+">💖</div>
+
+<div style="
+    position:absolute;
+    bottom:-10px;
+    left:-10px;
+    font-size:40px;
+    opacity:0.3;
+">✨</div>
+
+</div>
+`;
 };
 
 </script>
