--- a/index.html
+++ b/index.html
@@ -62,69 +62,39 @@ body {
 /* แก้ภาพไม่ขึ้น */
 img {
     img {
-    width: 260px;
-    height: 260px;
+    width: 250px;
+    height: 250px;
     object-fit: cover;
-    border-radius: 30px;
+    border-radius: 20px;
     display: block;
     margin: auto;
     position: relative;
     z-index: 1;
 
-    /* กรอบขาวฟุ้ง */
-    border: 6px solid rgba(255,255,255,0.8);
+    /* ขอบขาวนุ่ม */
+    border: 5px solid rgba(255,255,255,0.85);
 
-    /* เงาชมพูฟุ้ง ๆ */
-    box-shadow: 
-        0 0 25px rgba(255,182,193,0.8),
-        0 10px 40px rgba(255,105,180,0.5),
-        0 0 60px rgba(255,192,203,0.6);
+    /* เงาชมพูฟุ้ง */
+    box-shadow:
+        0 0 20px rgba(255,182,193,0.7),
+        0 10px 25px rgba(0,0,0,0.25);
 
-    /* แสงวิ้ง */
+    /* เรืองแสงเบา ๆ */
     animation: glow 2.5s infinite alternate ease-in-out;
 }
 
-/* เอฟเฟกต์เรืองแสง */
+/* แสงวิ้ง */
 @keyframes glow {
     from {
-        box-shadow: 
-            0 0 20px rgba(255,182,193,0.6),
-            0 10px 30px rgba(255,105,180,0.4);
+        box-shadow:
+            0 0 15px rgba(255,182,193,0.5),
+            0 10px 25px rgba(0,0,0,0.25);
     }
     to {
-        box-shadow: 
-            0 0 40px rgba(255,192,203,1),
-            0 10px 50px rgba(255,20,147,0.6);
+        box-shadow:
+            0 0 30px rgba(255,192,203,0.9),
+            0 10px 25px rgba(0,0,0,0.25);
     }
-}
-
-/* คำถาม */
-#question {
-    font-size: 28px;
-    margin: 20px 0;
-}
-
-/* ปุ่ม */
-button {
-    padding: 15px 25px;
-    font-size: 20px;
-    border: none;
-    border-radius: 15px;
-    margin: 15px;
-    cursor: pointer;
-}
-
-#loveBtn {
-    background: #ff4d6d;
-    color: white;
-}
-
-#noLoveBtn {
-    background: #555;
-    color: white;
-    position: fixed;
-    left: 60%;
-    top: 70%;
 }
 
 /* สั่น */
