--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@ body {
 img {
     img {
     width: 250px;
+    height: 250px;
+    object-fit: cover;
     border-radius: 20px;
     box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-2 hours ago
-
-Update index.html
+    display: block;
+    margin: auto;
 }
 
 /* สั่น */
