--- a/index.html
+++ b/index.html
@@ -69,7 +69,14 @@ img {
     display: block;
     margin: auto;
 }
-
+#noLoveBtn {
+    background: #555;
+    color: white;
+    position: fixed;
+    left: 60%;
+    top: 70%;
+}
+    
 /* animation เด้ง */
 @keyframes pop {
     0% { transform: scale(0.8); opacity:0; }
